# Wasma

./: Cargo.toml  README.md  README.txt
src/: wasma.in.conf
src/client/: Cargo.toml
src/client/benches/: resource_allocation.rs  window_performance.rs
src/client/src/: lib.rs  main.rs  parser.rs  protocols.rs  uclient.rs  wgclient.rs  window_client.rs  window_handling.rs  window_multitary.rs  window_resourcer_engineering.rs  window_resourcer_enginnering.rs  window_signularity.rs  window_singularity.rs
src/wbackend/: Cargo.toml
src/wbackend/src/: assignment.rs  lib.rs  main.rs  resource_manager.rs  scheduler.rs
src/wsdg-app-manifest/: .gitkeep  Cargo.toml  lib.rs  manifest_parser.rs  source_parser.rs  wasma.manifest
src/wsdg-xdg/: CAT  Cargo.toml  appstarter.config  env.path  wsdg-autocompile.rs  wsdg-byico-icoctl.rs  wsdg-env.rs  wsdg-ghx-open.rs  wsdg-mime-array.rs  wsdg-open.rs  wsdg-settings.rs  wsdg-starter.rs  xdg-wsdg-translate.rs
src/wsdg-xdg/src/: lib.rs  wsdg_autocompile.rs  wsdg_byico_icoctl.rs  wsdg_env.rs  wsdg_ghx_open.rs  wsdg_manifest_open.rs  wsdg_open.rs  wsdg_settings.rs  xdg_wsdg_translate.rs
wasma-ubin/: Cargo.toml
wasma-ubin/src/: lib.rs  main.rs
wasma-ubin/src/core/: abi.rs  assigment_bridge.rs  assignment_bridge.rs  convergence.rs  mod.rs  runtime.rs
wasma-ubin/src/platform/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
wasma-ubin/src/transmutation/: disassembler.rs  feature_extractor.rs  mod.rs  patcher.rs  rebuilder.rs
wasma-ubin/src/utils/: logging.rs  mod.rs  safety.rs
wasma-ubin/src/widget/: advanced.rs  builder.rs  mod.rs  primitives.rs
