[package]
name = "wasma-ubin"
version = "1.1.0-stable-beta1"
edition = "2021"
authors = ["Zaman Huseyinli <zamanhuseynli23@gmail.com>", "AUO Lejyon"]
description = "WASMA Unified Binary Interface – Tek otorite, sınırsız egemenlik"
repository = "https://github.com/Azccriminal/wasma-ubin"
license = "Apache-2"
keywords = ["gui", "abi", "transmutation", "convergence", "wasma"]
categories = ["gui", "development-tools", "os"]
readme = "README.md"

[dependencies]
# Core GUI – fallback ve ghost mod için
iced = { version = "0.12", features = ["wgpu", "tokio"], optional = true }
winit = { version = "0.29", optional = true }
wgpu = { version = "0.19", optional = true }
wbackend = { path = "../src/wbackend" }
# Disassembly & Binary Manipulation
capstone = { version = "0.12", optional = true }
object = { version = "0.32", optional = true, features = ["write_core"] }
goblin = { version = "0.8", optional = true }

# Logging & Utils
chrono = { version = "0.4", features = ["clock"] }
log = "0.4.29"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[features]
default = ["native-fallback"]

# Fallback UI – iced + wgpu ile ghost mod
native-fallback = ["dep:iced", "dep:winit", "dep:wgpu"]

# Transmutation motoru – binary patch & convergence
transmutation = ["dep:capstone", "dep:object", "dep:goblin"]

# Platform adaptörleri (şimdilik boş – ileride native library bağlayabilir)
linux = []
windows = []
macos = []

# Tüm özellikler aktif – tam WASMA deneyimi
full = ["native-fallback", "transmutation"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "wasma-ubin"
path = "src/main.rs"
required-features = ["native-fallback"]
