# Cargo.toml – wasma-client
[package]
name = "wasma-client"
version = "1.0.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", optional = true }
wgpu = "0.19"
iced = { version = "0.12", features = ["wgpu", "tokio"] }
tokio = { version = "1", features = ["full"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }

# Web için
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document"] }
console_error_panic_hook = "0.1"
