[package]
name = "wasma-client"
version = "1.2.0-beta1"
edition = "2021"
authors = ["WASMA Development Team"]
description = "Windows Assignment System Monitoring Architecture - Cross-platform resource-aware window management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wasma/wasma"
keywords = ["window-manager", "compositor", "resource-management", "wasma"]
categories = ["gui", "os", "graphics"]
rust-version = "1.75"

[lib]
name = "wasma_client"
path = "src/lib.rs"

[[bin]]
name = "wasma"
path = "src/main.rs"

[dependencies]
# WBackend - Resource Management Core
wbackend = { path = "../wbackend" }

# GUI Framework - Iced
iced = { version = "0.12", features = ["tokio", "advanced"] }

# System & Hardware
core_affinity = "0.8"
libc = "0.2"

# Networking & Protocols
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full", "server", "http1", "http2"] }
tonic = { version = "0.11", optional = true }  # gRPC
prost = { version = "0.12", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Graphics & Rendering (Optional based on renderer)
[dependencies.gl]
version = "0.14"
optional = true

[dependencies.opencl3]
version = "0.9"
optional = true

[dependencies.rayon]
version = "1.8"
optional = true

# Wayland Support
[dependencies.wayland-client]
version = "0.31"
optional = true

[dependencies.wayland-protocols]
version = "0.31"
optional = true

# X11 Support
[dependencies.x11rb]
version = "0.13"
features = ["allow-unsafe-code"]
optional = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["iced-gui", "x11", "wayland", "cpu-renderer"]

# GUI Features
iced-gui = []

# Backend Features
x11 = ["x11rb"]
wayland = ["wayland-client", "wayland-protocols"]

# Renderer Features
cpu-renderer = []  # Always available fallback
glx = ["gl", "x11"]
opencl-gpu = ["opencl3"]
intel-uhd = ["rayon"]

# Protocol Features
grpc = ["tonic", "prost"]
tor-support = []

# Convenience feature sets
all-renderers = ["glx", "opencl-gpu", "intel-uhd"]
all-backends = ["x11", "wayland"]
full = ["all-backends", "all-renderers", "grpc", "tor-support"]

# Minimal build (CLI only, no GUI)
minimal = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 1

[profile.bench]
opt-level = 3
debug = false
lto = true

[[bench]]
name = "window_performance"
harness = false

[[bench]]
name = "resource_allocation"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "sched"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }
